--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Bigbird/savedmodel
 Bigbird/savedmodel_2
 Bigbird/ddp
+pdf-extractor-api/model_15.h5
+pdf-extractor-api/model_weights_13.pt
+pdf-extractor-api/OCR_SANTOSH
