--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Bigbird/ddp
 pdf-extractor-api/model_15.h5
 pdf-extractor-api/model_weights_13.pt
 pdf-extractor-api/OCR_SANTOSH
+pdf-extractor-api/e_img
+pdf-extractor-api/img
+pdf-extractor-api/l_img
