--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Bigbird/savedmodel
 Bigbird/savedmodel_2
 Bigbird/ddp
+Bigbird/ddp_2
 pdf-extractor-api/model_15.h5
 pdf-extractor-api/model_weights_13.pt
 pdf-extractor-api/OCR_SANTOSH
@@ -8,3 +9,4 @@ pdf-extractor-api/e_img
 pdf-extractor-api/img
 pdf-extractor-api/l_img
 pdf-extractor-api/output
+final_data.csv
