--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Bigbird/savedmodel
 Bigbird/savedmodel_2
 Bigbird/ddp
 Bigbird/ddp_2
+longformer/ddp
 pdf-extractor-api/model_15.h5
 pdf-extractor-api/model_weights_13.pt
 pdf-extractor-api/OCR_SANTOSH
@@ -10,3 +11,5 @@ pdf-extractor-api/img
 pdf-extractor-api/l_img
 pdf-extractor-api/output
 final_data.csv
+GECwBERT
+cat_poc_model_2/bert-based-uncased-GED.pth
