finished sample_1 image2table

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ Bigbird/savedmodel
 Bigbird/savedmodel_2
 Bigbird/ddp
 Bigbird/ddp_2
-longformer/ddp
+longformer/ddp_longformer
 pdf-extractor-api/model_15.h5
 pdf-extractor-api/model_weights_13.pt
 pdf-extractor-api/OCR_SANTOSH
