downloaded language_tool

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ pdf-extractor-api/output
 final_data.csv
 GECwBERT
 cat_poc_model_2/bert-based-uncased-GED.pth
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 12-59-24.png
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 13-02-13.png
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 13-04-53.png
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 13-13-05.png
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 13-20-57.png
+pdf-extractor-api/table_images/Screenshot from 2023-07-21 13-22-42.png
+LanguageTool-6.2/
+languagetool
